# mcserver-statuschecker

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/rust/: devcontainer.json
src/: main.rs
src/api/: appstate.rs  mod.rs  service.rs
src/config/: mod.rs
src/updater/: mod.rs
src/utility/: args.rs  mod.rs
test/config/: test1.json
test/config/ok/: ok_1.json  ok_save_favicon.json  ok_save_favicon_2.json
