[package]
name = "mcserver-statuschecker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json", "macros"] }
base64 = "0.22.1"
env_logger = "0.11.8"
log = "0.4.28"
mc-server-status = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
